[FIX] horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,7 @@ a .active>svg {
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand{
   color: #f5f5f5;
 }
+
+* {
+  overflow-x: hidden;
+}
